--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "id.kopas.berkarya.said.ibanking"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 4
-        versionName "1.0.2 Alfa 3"
+        versionCode 11
+        versionName "1.0 Build 11"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         setProperty("archivesBaseName", "versi_$versionName")
