--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "id.kopas.berkarya.said.ibanking"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 11
-        versionName "1.0 Build 11"
+        versionCode 19
+        versionName "1.0 Build 19"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         setProperty("archivesBaseName", "versi_$versionName")
@@ -78,7 +78,10 @@ dependencies {
     implementation 'com.nabinbhandari.android:permissions:3.8'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
     implementation 'info.androidhive:fontawesome:0.0.5'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation 'com.google.zxing:core:3.3.3'
 }
