--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.2"
-        classpath 'com.android.tools.build:gradle-experimental:0.9.3' //0.9.3
+        classpath 'com.android.tools.build:gradle-experimental:0.9.3' //0.9.3X
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
